# TrafficCop-Bench

./: Cargo.toml  LICENSE  README.md  bench.sh  perf-test.sh
config/: bench-local.yaml
examples/: full-test.yaml  http-test.yaml
src/: lib.rs  main.rs
src/backend/: mod.rs
src/config/: mod.rs
src/display/: mod.rs
src/grpc/: mod.rs
src/http/: mod.rs
src/metrics/: mod.rs
src/report/: mod.rs
src/resources/: mod.rs
src/tcp/: mod.rs
src/websocket/: mod.rs
